[package]
name = "cdb"
version = "0.1.0"
authors = ["ryo33 <ryo12redstone@gmail.com>"]

[[bin]]
name = "cdb"
path = "src/main.rs"

[dependencies]
piston = "0.13.0"
piston_window = "0.25.0"
piston2d-sprite = "0.17.0"
piston2d-graphics = "0.10.0"
find_folder = "0.3.0"
piston2d-gfx_graphics = "0.11.0"
gfx_device_gl = "0.5.0"
num = "*"
